--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dialogflow": "^1.2.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "ibm-watson": "^7.0.0"
