Finished the setting up of the df-chabot, created a new intent to allow the bot respond to queries on switching tables. Also formatted the code and added comments to better understand the code

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+test-n9ct-3c56d411b200.json
+df_key.json
+devkey.js
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
